tests/samples/positive/pattern_matching/enum_adt_payload.ax
module enum_adt_payload;

enum OptionI32 {
    some(i32),
    none,
}

enum Token {
    ident(str),
    span(usize, usize),
    eof,
}

fn value(opt: OptionI32) -> i32 {
    return match opt {
        .some(v) => v,
        .none => 0,
    };
}

fn token_score(token: Token) -> i32 {
    return match token {
        .ident(name) => 1,
        .span(start, end) => ((end - start) as i32) + 1,
        .eof => 3,
    };
}

fn main() -> i32 {
    let opt = OptionI32.some(41);
    let none = OptionI32.none;
    let token = Token.span(((1) as usize), ((2) as usize));
    return value(opt) + value(none) + token_score(token) - 43;
}
