tests/samples/negative/pattern_matching/enum_payload_bool_missing_witness.ax
module enum_payload_bool_missing_witness;

enum MaybeBool {
    some(bool),
    none,
}

fn score(value: MaybeBool) -> i32 {
    return match value {
        .some(true) => 1,
        .none => 0,
    };
}

fn main() -> i32 {
    return score(MaybeBool.some(false));
}
